# STAR

./: .clang-format  .cleanup_archive  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  DAQ_BRIDGE_README.md  DEBUG_ELODIN.md  Doxyfile  GUI_README.md  INSTALL.md  PULL_INSTRUCTIONS.md  QUICK_START_GROUND_STATION.md  README.md  SETUP.md  STAR_ADS126X.cpp  a.out  build.sh  check_env.sh  flake.nix  format.sh  package-lock.json  pyproject.toml  requirements.txt  setup.sh  system_config.json  test_ws.py
EngineDesign/: .gitignore  QUICKSTART.md  README.md  TROUBLESHOOTING.md  package-lock.json  pyproject.toml  reproduce_failure.py  requirements.txt  setup_venv.sh
EngineDesign/archive/scrap_files/: LE3_Flight_Data.csv  analyze_flight_data.py  repro_warning.py  reproduce_depletion.py  test_layer1_nit_fix.py  test_solved_chamber_plot.py  verify_logging.py
EngineDesign/backend/: main.py  state.py
EngineDesign/backend/routers/: config.py  flight.py  optimizer.py  timeseries.py
EngineDesign/configs/: config_20251115_111229.yaml  config_3d_test.yaml  default.yaml  layer1_optimized_config (3).yaml  robust_ddp_default.yaml
EngineDesign/copv/: blowdown_solver.py  copv_solve.py  copv_solve_both.py  reproduce_blowdown.py
EngineDesign/csv_to_eng/: __init__.py  core.py
EngineDesign/docs/: Cd_calculation_methodology.md  layer1_pressure_explanation.md  layer1_static_optimization_explained.md  optimization_layers_readme.md  optimizer_readme.md  pintle_geometry_constraints (1).md  pintle_geometry_constraints.md
EngineDesign/docs/archive/: DIAGNOSTICS_COMBUSTION_STABILITY.md  EXIT_PRESSURE_VERIFICATION.md  FRONTEND_BACKEND_INTEGRATION_VERIFIED.md  LAYER1_DIAGNOSTIC_GUIDE.md  LAYER1_NIT_FIX.md  LAYER1_OBJECTIVE_LOGGING.md  LAYER1_REVIEW.md  PHYSICS_FIXES.md  PLAN_COMBUSTION_OVERHAUL.md  PLAN_FIX_LAYER1_ISSUES.md  WHY_THROAT_MACH_1.md
EngineDesign/docs/control/: ACTUATION.md  DDP_SOLVER.md  DYNAMICS.md  FEEDFORWARD_FIX.md  FRONTEND_INTEGRATION.md  FRONTEND_INTEGRATION_COMPLETE.md  INDEX.md  QUICK_START.md  README.md  REFERENCE.md  SAFETY_FILTER.md
EngineDesign/docs/latex/: 04_compressible_flow_chamber.tex  07_combustion_stability.tex  08_optimal_control_ddp.tex  10_time_varying_coupled.tex  common.tex  master.tex
EngineDesign/engine/control/: __init__.py
EngineDesign/engine/core/: chamber_geometry.py  chamber_geometry_solver.py  chamber_physics_fixed.py  chamber_profiles.py  closure.py  discharge.py  dxf_export.py  mach_solver.py  nozzle.py  runner.py  spray.py
EngineDesign/engine/optimizer/: display_results.py  main_optimizer.py
EngineDesign/engine/pipeline/: animation_fixed.py  burn_analysis.py  chamber_geometry_fixed.py  chamber_geometry_visualizer.py  chamber_optimizer.py  combustion_eff.py  comprehensive_geometry_sizing.py  comprehensive_optimizer.py  config_schemas.py  constants.py  coupled_optimizer.py  feed_loss.py  io.py  nozzle_dynamics.py  numerical_robustness.py  recession_animation_fixed.py  recession_animation_stable.py  recession_animation_working.py  spalding.py  (+2 more)
EngineDesign/frontend/: .npmrc  index.html  package-lock.json  package.json
EngineDesign/payload/: README.md  __init__.py  cold_gas_thruster.py  optimize_cgt.py
EngineDesign/scripts/: build_policy_lut.py  pressure_sweep.py  run_full_pipeline.py
EngineDesign/tests/: test_cold_gas_thruster.py  test_hybrid_optimizer.py  test_layer1_bounds_fix.py  test_layer1_pressures_logic.py  test_layer2_of_pointwise.py  test_layer2_pc_constraint.py  verify_layer2_improvements_v2.py
EngineDesign/tools/: analyze_controller_run.py
EngineDesign/ui/: design_optimization_view.py  flight_sim.py  flight_visuals.py
FSW/: CMakeLists.txt
FSW/examples/: ground_station_integration_example.cpp
FSW/include/: Config.h  DiabloGlobals.h
FSW/src/: complete_calibration_pipeline.cpp  daq_bridge_main.cpp  data_logger_main.cpp  esp32_elodin_streamer.cpp  fake_data_test_system.cpp  fsw_web_bridge.cpp  live_esp32_elodin_stream.cpp  main.cpp  paper_algorithm_pipeline.cpp  pt_calibration_example.cpp  pt_integration_example.cpp  simple_esp32_streamer.cpp
FSW/test/: send_all_sensors_from_config.cpp  test_imu_calibration.cpp  test_robust_ddp.cpp  test_sequencer_elodin.cpp
daq-server/: .clang-format  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  engine_sim  requirements.txt  startup.sh
daq-server/FSW/: CMakeLists.txt
daq-server/calibration/: calibration_2026-02-24T23-46-38.json  calibration_2026-02-25T00-02-39.json  calibration_2026-02-25T00-03-32.json  calibration_2026-02-25T00-12-00.json  calibration_2026-02-25T00-13-21.json  calibration_2026-02-25T00-53-46.json  calibration_2026-02-25T01-00-34.json  calibration_2026-02-25T03-44-09.json
daq-server/config/: README.md  config.toml  state_machine_actuator_delays.csv  state_machine_actuators.csv
daq-server/diablo_server/: CMakeLists.txt
daq-server/docs/: ACTUATOR_PIPELINE_AND_TMUX.md  ADC_AND_ELODIN_DIAGNOSTICS.md  CLEANUP_SUMMARY.md  CONFIGURATION_GUIDE.md  CONTROLLER_THRUST_CURVE_GUIDE.md  DIABLOAVIONICS_ANALYSIS.md  DIABLOAVIONICS_NETWORK_CONFIG.md  GUI_FIXES_AND_PT_CALIBRATION.md  IMPROVEMENTS.md  README.md
daq-server/flash/: README.md  dependencies.txt  flash.sh
daq-server/githooks/: pre-push
daq-server/procedures/: avionics_manager.md  ecomm.md  ethanol_fill.md  feed_system_manager.md  gn2_high_press_fill.md  lox_fill.md  operations_manager.md  pad_manager.md
daq-server/scripts/: README.md  README_DAQ.md  setup_pre_commit.sh  setup_sim_network.sh  teardown_sim_network.sh
daq-server/sim/: board_simulator.py
daq-server/test/: e2e_guitest_playwright.sh  e2e_sensor_info.sh  test_integration.sh  test_robustness_system.py
daq-server/web-gui/: INSTALL.md  README.md  VERIFICATION.md  start.sh
daq_comms/: CMakeLists.txt
daq_comms/src/: daq_bridge_main.cpp  fake_packet_generator.cpp
daq_comms/test/: fake_calibrated_pt.cpp  send_all_message_types.cpp  send_all_sensors.cpp  send_fake_pt.cpp
diablo_server/lib/: CMakeLists.txt
diablo_server/services/: CMakeLists.txt
(+3104 files in other folders)
