[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csv_to_eng"
version = "1.0.0"
description = "Convert CSV thrust curve data to RASP .eng engine files"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EngineDesign Team"}
]
keywords = ["rocket", "engine", "thrust", "curve", "rasp", "eng", "rocketry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No runtime dependencies - stdlib only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
csv-to-eng = "csv_to_eng.cli:main"

[tool.setuptools.packages.find]
include = ["csv_to_eng*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
